--- a/litellm-ecs-task.yaml
+++ b/litellm-ecs-task.yaml
@@ -52,6 +52,16 @@ Parameters:
     Description: 'CloudWatch log group retention in days'
     Default: 7
     AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
+  
+  ClaudeModel:
+    Type: String
+    Description: 'Claude model to use in Bedrock'
+    Default: 'anthropic.claude-3-5-sonnet-20241022-v2:0'
+    AllowedValues:
+      - 'anthropic.claude-3-5-sonnet-20241022-v2:0'
+      - 'anthropic.claude-3-5-sonnet-20240620-v1:0'
+      - 'anthropic.claude-3-sonnet-20240229-v1:0'
+      - 'anthropic.claude-3-haiku-20240307-v1:0'
 
 Resources:
   # Security Group for LiteLLM
@@ -118,7 +128,10 @@ Resources:
                   - bedrock:InvokeModel
                   - bedrock:InvokeModelWithResponseStream
                 Resource: 
-                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/*'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-5-sonnet-20241022-v2:0'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-sonnet-20240229-v1:0'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-haiku-20240307-v1:0'
                   - !Sub 'arn:aws:bedrock:${AWS::Region}:${AWS::AccountId}:custom-model/*'
                   - !Sub 'arn:aws:bedrock:${AWS::Region}:${AWS::AccountId}:provisioned-model/*'
               - Effect: Allow
@@ -188,6 +201,12 @@ Resources:
               Value: !Ref ContainerPort
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: AWS_REGION
+              Value: !Ref AWS::Region
+            - Name: LITELLM_LOG
+              Value: INFO
+            - Name: LITELLM_MODEL
+              Value: !Sub 'bedrock/${ClaudeModel}'
           LogConfiguration:
             LogDriver: awslogs
             Options:
