Update with all current AWS Bedrock Anthropic models (October 2025)
- Add Claude Sonnet 4.5 (anthropic.claude-sonnet-4-5-20250929-v1:0)
- Add Claude Opus 4.1 (anthropic.claude-opus-4-1-20250805-v1:0)
- Confirm Claude 3.7 Sonnet availability (anthropic.claude-3-7-sonnet-20250219-v1:0)
- Update IAM permissions for all model variants
- Set Claude 3.7 Sonnet as default per user preference

--- a/litellm-ecs-task.yaml
+++ b/litellm-ecs-task.yaml
@@ -56,8 +56,11 @@ Parameters:
   ClaudeModel:
     Type: String
     Description: 'Claude model to use in Bedrock'
-    Default: 'anthropic.claude-3-5-sonnet-20241022-v2:0'
+    Default: 'anthropic.claude-3-7-sonnet-20250219-v1:0'
     AllowedValues:
+      - 'anthropic.claude-sonnet-4-5-20250929-v1:0'
+      - 'anthropic.claude-opus-4-1-20250805-v1:0'
+      - 'anthropic.claude-3-7-sonnet-20250219-v1:0'
       - 'anthropic.claude-3-5-sonnet-20241022-v2:0'
       - 'anthropic.claude-3-5-sonnet-20240620-v1:0'
       - 'anthropic.claude-3-sonnet-20240229-v1:0'
@@ -128,6 +131,9 @@ Resources:
                   - bedrock:InvokeModel
                   - bedrock:InvokeModelWithResponseStream
                 Resource: 
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-sonnet-4-5-20250929-v1:0'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-opus-4-1-20250805-v1:0'
+                  - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0'
                   - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-5-sonnet-20241022-v2:0'
                   - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0'
                   - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/anthropic.claude-3-sonnet-20240229-v1:0'
