--- a/litellm-ecr-codebuild.yaml
+++ b/litellm-ecr-codebuild.yaml
@@ -120,56 +120,46 @@ Resources:
                 - SHORT_SHA=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
                 - |
                   cat > Dockerfile.aws-enhanced <<'EOF'
-                  # Use the official LiteLLM image as base
-                  FROM ghcr.io/berriai/litellm:main-latest as litellm-base
+                  # Start directly from the official LiteLLM image and just add AWS tools
+                  FROM ghcr.io/berriai/litellm:main-latest
                   
-                  # Switch to Amazon Linux 2023 for AWS tooling support
-                  FROM public.ecr.aws/amazonlinux/amazonlinux:2023
+                  # Switch to root to install packages
+                  USER root
                   
-                  # Install base tools and AWS utilities
-                  RUN dnf -y update && \
-                      dnf -y install \
-                          python3.11 \
-                          python3.11-pip \
+                  # Install AWS utilities on top of the existing image
+                  RUN apt-get update && \
+                      apt-get install -y \
+                          curl \
                           unzip \
                           tar \
                           gzip \
-                          curl \
-                          amazon-ssm-agent \
-                          amazon-efs-utils \
-                          amazon-cloudwatch-agent \
+                          wget \
                           && \
-                      dnf clean all && rm -rf /var/cache/dnf
+                      # Install AWS CLI v2
+                      curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+                      unzip awscliv2.zip && \
+                      ./aws/install && \
+                      rm -rf awscliv2.zip aws && \
+                      # Install SSM Agent (if needed for ECS tasks)
+                      wget https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/debian_amd64/amazon-ssm-agent.deb && \
+                      dpkg -i amazon-ssm-agent.deb || apt-get install -f -y && \
+                      rm amazon-ssm-agent.deb && \
+                      # Clean up
+                      apt-get clean && \
+                      rm -rf /var/lib/apt/lists/*
                   
-                  # Copy the entire LiteLLM installation from the official image
-                  # This approach copies everything to avoid missing specific paths
-                  COPY --from=litellm-base /app /app
-                  COPY --from=litellm-base /usr/local /usr/local
-                  COPY --from=litellm-base /root/.local /root/.local 2>/dev/null || true
+                  # Create non-root user for security (if it doesn't exist)
+                  RUN id -u litellm >/dev/null 2>&1 || useradd -m -u 1000 litellm
                   
-                  # Set working directory
-                  WORKDIR /app
-                  
-                  # Ensure Python can find all packages
-                  ENV PYTHONPATH="/usr/local/lib/python3.11/site-packages:/usr/local/lib/python3.10/site-packages:/usr/local/lib/python3.9/site-packages:$PYTHONPATH"
-                  ENV PATH="/usr/local/bin:/root/.local/bin:$PATH"
-                  
-                  # Create non-root user for security and fix permissions
-                  RUN useradd -m -u 1000 litellm && \
-                      chown -R litellm:litellm /app && \
-                      chmod +x /usr/local/bin/* 2>/dev/null || true
-                  
+                  # Switch back to non-root user
                   USER litellm
                   
                   # Health check
                   HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
                       CMD curl -f http://localhost:4000/health || exit 1
                   
-                  # Expose port
-                  EXPOSE 4000
-                  
-                  # Default command - try multiple possible entry points
-                  CMD ["litellm", "--config", "/app/config.yaml", "--port", "4000", "--num_workers", "1"]
+                  # Keep the original working directory and command from the base image
+                  # The base image already has the correct setup
                   EOF
                 - docker build -t "$REPOSITORY_NAME:$IMAGE_TAG" -t "$REPOSITORY_URI:$IMAGE_TAG" -t "$REPOSITORY_URI:sha-$SHORT_SHA" -f Dockerfile.aws-enhanced .
             post_build:
