Simplify Dockerfile to add only AWS SSM agent
- Remove unnecessary package installations (curl, bash, ca-certificates)
- Use existing tools in base LiteLLM image (wget, tar)
- Add only AWS SSM agent and service script
- Keep image as close as possible to original LiteLLM image

--- a/litellm-ecr-codebuild.yaml
+++ b/litellm-ecr-codebuild.yaml
@@ -126,15 +126,10 @@ Resources:
                   # Switch to root to install packages
                   USER root
                   
-                  # Install AWS SSM agent and minimal required packages
+                  # Install AWS SSM agent only
                   RUN apk update && \
-                      apk add --no-cache \
-                          curl \
-                          bash \
-                          ca-certificates \
-                          && \
                       # Download and install AWS SSM agent for Alpine Linux
-                      curl -o amazon-ssm-agent.tar.gz https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.tar.gz \
+                      wget -O amazon-ssm-agent.tar.gz https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.tar.gz \
                       && tar -xzf amazon-ssm-agent.tar.gz \
                       && ./amazon-ssm-agent/install \
                       && rm -rf amazon-ssm-agent.tar.gz amazon-ssm-agent \
